src/main/java/com/example/object/good/ticket/domain/Ticket.java
package com.example.object.good.ticket.domain;

public class Ticket {
    private Long fee;

    public Long getFee() {
        return fee;
    }
}
